# coordinate_conversion

./: .ci  .dockerignore  .gitignore  .gitmodules  .tests  Dockerfile  Makefile  README.md  ci.env  coordinate_conversion.mk
.github/workflows/: ci.yaml
coordinate_conversion/: CMakeLists.txt
coordinate_conversion/cmake/: PackagingInstallTargets.cmake
coordinate_conversion/include/coordinate_conversion/: coordinate_conversion.h
coordinate_conversion/src/: coordinate_conversion.cpp
files/: requirements.coordinate_conversion.ubuntu20.04.system
